# Contact_DDD

./: CMakeLists.txt  main.cpp
Domain/callHistory/: callHistory-repository.hpp  callHistory-service.hpp  callHistory.hpp  callhistory-factory.hpp
Domain/callHistory/value-objects/: contact-info.hpp
Domain/contact/: contact-factory.hpp  contact-repository.hpp  contact-service.hpp  contact.hpp
application/: application.hpp
application/DTO/: request-dto.hpp  response-dto.hpp
infrastructure/: connectionPooling.hpp
validation/: validation.hpp
